[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "okf-kit"
version = "0.1.0"
description = "A small toolkit for Open Knowledge Format (OKF) bundles: index, link, lint, and progressive-disclosure navigation over plain markdown."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["okf", "open-knowledge-format", "knowledge-base", "markdown", "agents", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "pyyaml>=6",          # robust YAML frontmatter parsing
    "okflint>=0.1.3",     # Google-spec OKF conformance linter (used by `okfkit validate`)
    "beartype>=0.19",     # okflint imports it but forgets to declare it
]

[project.optional-dependencies]
llm = ["openai>=1.0"]     # only needed for `okfkit structure` (LLM produce)
dev = ["pytest>=8"]       # optional; tests also run under stdlib `python -m unittest`

[project.urls]
Repository = "https://github.com/mitchellvanrijkom/okf-kit"

[project.scripts]
okfkit = "okfkit:main"

[tool.hatch.build.targets.wheel]
only-include = ["okfkit.py"]

[tool.hatch.build.targets.sdist]
include = ["okfkit.py", "README.md", "LICENSE", "kb/"]
